--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "rosa",
-    "description": "The theme for the DSA Libertarian Socialist Caucus.",
-    "version": "1.0.0",
-    "engines": {
-        "ghost": ">=1.2.0"
-    },
-    "license": "MIT",
-    "author": {
-        "name": "DSA LSC",
-        "email": "red_rosa@dsa-lsc.org",
-        "url": "http://www.dsa-lsc.org"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
-    },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
-    "devDependencies": {
-        "autoprefixer": "6.3.6",
-        "cssnano": "3.7.1",
-        "gulp": "3.9.1",
-        "gulp-livereload": "3.8.1",
-        "gulp-nodemon": "2.1.0",
-        "gulp-postcss": "6.1.1",
-        "gulp-sourcemaps": "1.6.0",
-        "gulp-util": "3.0.7",
-        "gulp-watch": "4.3.8",
-        "postcss-color-function": "2.0.1",
-        "postcss-custom-properties": "5.0.1",
-        "postcss-easy-import": "1.0.1"
-    },
-    "config": {
-        "posts_per_page": 25
-    }
+  "name": "rosa",
+  "description": "The theme for the DSA Libertarian Socialist Caucus.",
+  "version": "1.0.0",
+  "engines": {
+    "ghost": ">=1.2.0"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "DSA LSC",
+    "email": "red_rosa@dsa-lsc.org",
+    "url": "http://www.dsa-lsc.org"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TryGhost/Casper.git"
+  },
+  "bugs": "https://github.com/TryGhost/Casper/issues",
+  "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+  "devDependencies": {
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-livereload": "3.8.1",
+    "gulp-nodemon": "2.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "3.0.7",
+    "gulp-watch": "4.3.8",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1",
+    "main-bower-files": "^2.13.1"
+  },
+  "config": {
+    "posts_per_page": 25
+  }
 }
